--- a/Resume.html
+++ b/Resume.html
@@ -21,7 +21,18 @@
   </head>
   <body>
   <div class ="container">
-  TESTING REUSME PAGE
+  <nav class = "navbar navbar-default">
+					<div class = "container-fluid">			
+						<div id="navbar" class="navbar-collapse collapse">
+							<ul class="nav navbar-nav">
+								<li class="active"><a href="Homepage.html">Home</a></li>
+								<li><a href="Resume.html">Resume</a></li>
+								<li><a href="Academics.html">Academics</a></li>					
+								<li><a href="#">Projects</a></li>
+							</ul>
+						</div>
+					</div>
+				</nav>
   </div>
   </body>
   </html>
